@@ -662,8 +662,9 @@ NsTclThread(void *arg)
 {
     ThreadArg *argPtr = arg;
     Ns_DString ds, *dsPtr;
+    int        detached = argPtr->detached;
 
-    if (argPtr->detached) {
+    if (detached) {
 	dsPtr = NULL;
     } else {
 	Ns_DStringInit(&ds);
@@ -678,7 +679,7 @@ NsTclThread(void *arg)
 
     (void) Ns_TclEval(dsPtr, argPtr->server, argPtr->script);
     ns_free(argPtr);
-    if (!argPtr->detached) {
+    if (!detached) {
 	Ns_ThreadExit(Ns_DStringExport(&ds));
     }
 }
